# NIMIK

./: .coverage  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  terminal
.cursor/rules/: nimik.mdc
.github/: SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  data_source.yml  feature_request.md
.github/workflows/: ci.yml  pages.yml  source_submission.yml
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  NIMIK_Community_Engagement.md  NIMIK_Data_Processing_and_Quality.md  NIMIK_Data_Sourcing_and_Aggregation.md  NIMIK_Impact_and_Storytelling.md  NIMIK_User_Experience.md  NIMIK_Vision_and_Values.md  PHILOSOPHY.md  index.html
docs/community/: NIMIK_Community_Engagement.md  README.md
docs/data/: POTENTIAL_SOURCES.md  SOURCE_EVALUATION.md
docs/governance/: NIMIK_Project_Questions.md  README.md
docs/technical/: NIMIK_Data_Sourcing_and_Aggregation.md  NIMIK_Impact_and_Storytelling.md  NIMIK_Privacy_and_Security.md  README.md
docs/technical/development/: NIMIK_Data_Processing_and_Quality.md  NIMIK_Data_Sourcing_and_Aggregation.md  NIMIK_Impact_and_Storytelling.md  NIMIK_Privacy_and_Security.md  NIMIK_Search_and_Analysis.md  NIMIK_User_Experience.md  NIMIK_Vision_and_Values.md
